--- a/style.css
+++ b/style.css
@@ -125,6 +125,16 @@ body {
   color: white;
 }
 
+@media screen and (max-width: 1439px) {
+  .img-desktop {
+    margin-right: -250px;
+    margin-top: 43px;
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01);
+    display: none;
+  }
+}
+
 .design-container {
   font-family: "Overpass", sans-serif;
   display: -webkit-box;
@@ -145,6 +155,22 @@ body {
   overflow: hidden;
 }
 
+.design-container .design-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .design-container h2 {
   margin-top: 20px;
   font-size: 1.7rem;
@@ -154,7 +180,16 @@ body {
   padding: 20px;
 }
 
-.design-container img {
+.design-container .img-mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 43px;
   -webkit-transform: scale(1.01);
           transform: scale(1.01);
@@ -255,6 +290,10 @@ body {
   color: #1f3f5b;
 }
 
+.free-container .d-laptop {
+  display: none;
+}
+
 .free-container .text-content {
   margin-top: 37px;
   text-align: center;
@@ -280,6 +319,7 @@ body {
 }
 
 .blogr {
+  background-color: #25252d;
   height: 988px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -301,19 +341,77 @@ body {
   margin-top: 75px;
 }
 
-.blogr .footer-blogr {
+.blogr .footer-blogr1 {
   text-align: center;
   margin-top: 75px;
 }
 
-.blogr .footer-blogr h2 {
+.blogr .footer-blogr1 h2 {
   margin-bottom: 27px;
   font-size: 1.1rem;
   font-weight: 600;
   cursor: pointer;
 }
 
-.blogr .footer-blogr a {
+.blogr .footer-blogr1 a {
+  margin-bottom: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  color: #c8c8cb;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.blogr .footer-blogr2 {
+  text-align: center;
+  margin-top: 75px;
+}
+
+.blogr .footer-blogr2 h2 {
+  margin-bottom: 27px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.blogr .footer-blogr2 a {
+  margin-bottom: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  color: #c8c8cb;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.blogr .footer-blogr3 {
+  text-align: center;
+  margin-top: 75px;
+}
+
+.blogr .footer-blogr3 h2 {
+  margin-bottom: 27px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.blogr .footer-blogr3 a {
   margin-bottom: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -516,5 +614,540 @@ hr {
 
 .attribution a {
   color: #3e52a3;
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    font-family: "Overpass", sans-serif;
+  }
+  .container .back-img {
+    height: 600px;
+    background-image: url("./images/bg-pattern-intro.svg"), -webkit-gradient(linear, left top, left bottom, from(#ff8f70), to(#ff3d54));
+    background-image: url("./images/bg-pattern-intro.svg"), linear-gradient(180deg, #ff8f70, #ff3d54);
+    background-size: 350%;
+    background-repeat: no-repeat;
+    background-position: 36% 36%;
+    border-radius: 0 0 0 100px;
+    padding: 30px 25px 0 25px;
+  }
+  .container .back-img .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 25px;
+  }
+  .container .back-img .logo {
+    height: 2.5rem;
+    cursor: pointer;
+    margin-left: 150px;
+  }
+  .container .back-img .text-container {
+    color: white;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 110px;
+  }
+  .container .back-img .text-container h1 {
+    font-weight: 600;
+    font-size: 3.8rem;
+  }
+  .container .back-img .text-container h1 span {
+    display: initial;
+  }
+  .container .back-img .text-container h2 {
+    padding: 15px 15px 0 15px;
+    font-size: 1.1rem;
+    font-weight: 300;
+  }
+  .container .back-img .text-container a {
+    text-decoration: none;
+  }
+  .container .back-img .text-container .btn-wrapper {
+    margin-top: 46px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-weight: 600;
+    font-size: 1rem;
+    font-family: "Ubuntu", sans-serif;
+  }
+  .container .back-img .text-container .btn-wrapper .btn {
+    border: 1px solid white;
+    border-radius: 50px;
+    height: 47px;
+    width: 135px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-weight: 700;
+  }
+  .container .back-img .text-container .btn-wrapper .btn-primary {
+    background-color: white;
+    color: #ff525d;
+    margin-right: 20px;
+  }
+  .container .back-img .text-container .btn-wrapper .btn-secondary {
+    color: white;
+  }
+  .design-container {
+    font-family: "Overpass", sans-serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 103px 0 65px 0;
+    color: #1f3f5b;
+    overflow: hidden;
+  }
+  .design-container .design-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .design-container h2 {
+    margin-top: 20px;
+    font-size: 38px;
+  }
+  .design-container h2 span {
+    padding: 20px;
+  }
+  .design-container .img-desktop {
+    margin-right: -250px;
+    margin-top: 43px;
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01);
+  }
+  .design-container .img-mobile {
+    display: none;
+    height: 650px;
+    margin-top: 43px;
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01);
+  }
+  .design-container .text-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    text-align: left;
+    margin-top: 37px;
+    padding: 0 140px 0 140px;
+  }
+  .design-container .text-content h2 {
+    font-size: 30px;
+  }
+  .design-container .text-content p {
+    line-height: 2;
+    padding-top: 11px;
+    font-size: 15px;
+  }
+  .editor-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .editor-container .whitespace {
+    height: 100px;
+    width: 100%;
+    margin-bottom: -38px;
+    position: relative;
+  }
+  .editor-container .whitespace img {
+    position: absolute;
+    top: -7.1px;
+    left: 126px;
+    width: 551px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    z-index: 1;
+  }
+  .editor-container .text-content {
+    border-radius: 0 120px 0 120px;
+    background-image: url(images/bg-pattern-circles.svg), -webkit-gradient(linear, left top, left bottom, from(#2c2d3f), to(#3f4164));
+    background-image: url(images/bg-pattern-circles.svg), linear-gradient(#2c2d3f, #3f4164);
+    background-repeat: no-repeat, no-repeat;
+    background-size: 73%, 100%;
+    background-position: -58% 85%, 0% 0%;
+    border-bottom-left-radius: 100px;
+    border-top-right-radius: 100px;
+    text-align: center;
+    height: 400px;
+    padding: 0 155px 0 735px;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    text-align: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .editor-container .text-content h2 {
+    font-family: "Overpass", sans-serif;
+    font-weight: 600;
+    padding: 114px 0 0 0;
+    font-size: 2.3rem;
+    margin-bottom: 20px;
+    color: white;
+  }
+  .editor-container .text-content p {
+    font-family: "Overpass", sans-serif;
+    line-height: 1.6;
+    font-size: 17px;
+    color: white;
+    padding: 0px 10px 10px 0px;
+  }
+  .free-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 63px;
+    color: #1f3f5b;
+    margin-left: -290px;
+  }
+  .free-container .laptop-content .d-laptop {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .free-container .laptop-content .m-laptop {
+    display: none;
+  }
+  .free-container .text-content {
+    margin-top: 37px;
+    text-align: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    padding: 0 230px 0 20px;
+  }
+  .free-container .text-content h2 {
+    font-size: 2rem;
+    font-family: "Ubuntu", sans-serif;
+  }
+  .free-container .text-content p {
+    margin-top: 10px;
+    line-height: 1.7;
+    padding: 12px;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 17px;
+    padding: 4.5px;
+  }
+  .free-container .text-content .power {
+    margin-top: 46px;
+  }
+  .blogr {
+    background-color: #25252d;
+    height: 500px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 100px;
+    border-radius: 0 80px 0 0;
+    font-family: "Ubuntu", sans-serif;
+    color: white;
+    padding-left: 230px;
+  }
+  .blogr img {
+    margin-top: -150px;
+    height: 50px;
+  }
+  .blogr .footer-blogr3 {
+    position: relative;
+    margin-top: -30px;
+  }
+  .blogr .footer-blogr3 h2 {
+    padding-left: 230px;
+    margin-bottom: 27px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .blogr .footer-blogr3 a {
+    padding-left: 230px;
+    margin-bottom: 17px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-decoration: none;
+    color: #c8c8cb;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+  .blogr .footer-blogr1 {
+    position: relative;
+    margin-top: 30px;
+  }
+  .blogr .footer-blogr1 h2 {
+    padding-left: 230px;
+    margin-bottom: 27px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .blogr .footer-blogr1 a {
+    padding-left: 230px;
+    margin-bottom: 17px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-decoration: none;
+    color: #c8c8cb;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+  .blogr .footer-blogr2 {
+    position: relative;
+    margin-top: 0px;
+  }
+  .blogr .footer-blogr2 h2 {
+    padding-left: 230px;
+    margin-bottom: 27px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .blogr .footer-blogr2 a {
+    padding-left: 230px;
+    margin-bottom: 17px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-decoration: none;
+    color: #c8c8cb;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+  .nav-menu {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    z-index: 999;
+  }
+  .nav-menu .nav-close {
+    display: none;
+  }
+  .nav-menu .nav-close .mobile-close {
+    cursor: pointer;
+  }
+  .nav-menu .menu-container {
+    background-color: transparent;
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 0;
+    -webkit-box-shadow: 0 0px 0px;
+            box-shadow: 0 0px 0px;
+    padding: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .nav-menu .menu-container .menu-item:hover .items {
+    position: absolute;
+    width: 110px;
+  }
+  .nav-menu .menu-container .menu-item .items {
+    border-radius: 5px;
+    width: 100%;
+    background-color: #f0f0f0;
+    display: none;
+  }
+  .nav-menu .menu-container .menu-item .items a {
+    text-decoration: none;
+    color: #c8c8cb;
+    padding: 15px 5px;
+  }
+  .nav-menu .menu-container .menu-item .items a:hover {
+    color: #1f3f5b;
+  }
+  .nav-menu .menu-container .menu-item h4 {
+    color: #1f3f5b;
+    font-size: 17px;
+    padding: 20px 5px;
+    cursor: pointer;
+  }
+  .nav-menu .menu-container .menu-item h4:hover {
+    color: #c8c8cb;
+  }
+  .nav-menu .menu-container .heading {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 20px;
+  }
+  hr {
+    display: none;
+    margin-top: 50px;
+    color: #c8c8cb;
+  }
+  .btn-login {
+    margin: 0 0 0 250px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-weight: 600;
+    font-size: 1rem;
+    font-family: "Ubuntu", sans-serif;
+  }
+  .btn-login .btn {
+    text-decoration: none;
+    border-radius: 50px;
+    height: 47px;
+    width: 135px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-weight: 700;
+  }
+  .btn-login .btn-log {
+    color: #25252d;
+    margin-bottom: 13px;
+  }
+  .btn-login .btn-signup {
+    background-image: -webkit-gradient(linear, left top, right top, from(#ff8f70), to(#ff3d54));
+    background-image: linear-gradient(90deg, #ff8f70, #ff3d54);
+    color: white;
+  }
+  .menu-hide {
+    left: 0;
+    opacity: 1;
+  }
+  .mobile-open {
+    height: 20px;
+    width: 23px;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
