--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,8 +16,7 @@ $colors: (
   //Background gradient - Intro/CTA mobile nav:
   Very-light-red:
     linear-gradient(180deg, hsl(13, 100%, 72%), hsl(353, 100%, 62%)),
-    btn-color:
-    linear-gradient(90deg, hsl(13, 100%, 72%), hsl(353, 100%, 62%)),
+  btn-color: linear-gradient(90deg, hsl(13, 100%, 72%), hsl(353, 100%, 62%)),
   //Background gradient - body:
   items-color: hsl(237, 23%, 32%)
 );
@@ -40,94 +39,82 @@ body {
 
 .container {
   font-family: "Overpass", sans-serif;
+  height: 600px;
+  background: url("/images/bg-pattern-intro.svg"), color(Very-light-red);
+  background-size: 350%;
+  background-repeat: no-repeat;
+  background-position: 36% 36%;
+  border-radius: 0 0 0 100px;
+  padding: 30px 25px 0 25px;
+  .navbar {
+    display: flex;
 
-  .back-img {
-    height: 600px;
-    background-image: url("./images/bg-pattern-intro.svg"),
-      color(Very-light-red);
-    background-size: 350%;
-    background-repeat: no-repeat;
-    background-position: 36% 36%;
-    border-radius: 0 0 0 100px;
-    padding: 30px 25px 0 25px;
-    .navbar {
+    justify-content: space-between;
+    margin-top: 25px;
+  }
+  .logo {
+    height: 2rem;
+    cursor: pointer;
+  }
+
+  .text-container {
+    color: color(White-text);
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    padding-top: 110px;
+
+    h1 {
+      font-weight: 600;
+      font-size: clamp(1rem, 5vw, 3rem);
+
+      span {
+        display: block;
+      }
+    }
+
+    h2 {
+      padding: 15px 15px 0 15px;
+      font-size: 1.1rem;
+      font-weight: 300;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    .btn-wrapper {
+      margin-top: 46px;
+      justify-content: space-around;
       display: flex;
-      justify-content: space-between;
-      margin-top: 25px;
-    }
-    .logo {
-      height: 2rem;
-      cursor: pointer;
-    }
-
-    .text-container {
-      color: color(White-text);
+      flex-direction: row;
       align-items: center;
-      text-align: center;
-      justify-content: center;
-      display: flex;
-      flex-direction: column;
-      padding-top: 110px;
+      font-weight: 600;
+      font-size: 1rem;
+      font-family: "Ubuntu", sans-serif;
 
-      h1 {
-        font-weight: 600;
-        font-size: 2.2rem;
-
-        span {
-          display: block;
-        }
-      }
-
-      h2 {
-        padding: 15px 15px 0 15px;
-        font-size: 1.1rem;
-        font-weight: 300;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-      .btn-wrapper {
-        margin-top: 46px;
-        justify-content: space-around;
+      .btn {
+        border: 1px solid white;
+        border-radius: 50px;
+        height: 47px;
+        width: 135px;
         display: flex;
-        flex-direction: row;
         align-items: center;
-        font-weight: 600;
-        font-size: 1rem;
-        font-family: "Ubuntu", sans-serif;
-
-        .btn {
-          border: 1px solid white;
-          border-radius: 50px;
-          height: 47px;
-          width: 135px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-weight: 700;
-        }
-        .btn-primary {
-          background-color: color(White-text);
-          color: color(Lightred);
-          margin-right: 20px;
-        }
-        .btn-secondary {
-          color: color(White-text);
-        }
+        justify-content: center;
+        font-weight: 700;
+      }
+      .btn-primary {
+        background-color: color(White-text);
+        color: color(Lightred);
+        margin-right: 20px;
+      }
+      .btn-secondary {
+        color: color(White-text);
       }
     }
   }
-}
-@media screen and (max-width:1439px) {
-  .img-desktop{
-    margin-right: -250px;
-    margin-top: 43px;
-    transform: scale(1.01);
-    display: none;
-}
-  
 }
 
 .design-container {
@@ -139,130 +126,163 @@ body {
   margin: 103px 0 65px 0;
   color: color(Very-dark-headings);
   overflow: hidden;
-  .design-content{
+  .design-content {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+  .image-design {
+    width: 100%;
+    background-image: url(/images/illustration-editor-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    padding: 13em;
+    margin-top: 3em;
+  }
   h2 {
-    margin-top: 20px;
-    font-size: 1.7rem;
+    font-size: clamp(1.7rem, 5vw, 2rem);
     span {
       padding: 20px;
     }
   }
 
-  .img-mobile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 43px;
-    transform: scale(1.01);
-  }
   .text-content {
-    
+    width: 100%;
     margin-top: 37px;
     text-align: center;
     padding: 0 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     p {
       line-height: 2;
-      padding: 11px;
-      font-size: 17px;
+      padding: 2em;
+      font-size: clamp(0.5rem, 5vw, 1rem);
+
+      max-width: 80%;
     }
   }
 }
+
 .editor-container {
+  margin-top: 25em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  border-radius: 0 120px 0 120px;
+  background-image: url(/images/bg-pattern-circles.svg),
+  linear-gradient($gradient-1, $gradient-2);
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, cover;
+  background-position: -50px -300px, 0% 0%;
+  border-bottom-left-radius: 100px;
+  border-top-right-radius: 100px;
+  text-align: center;
+  height: 628px;
+  padding: 0 20px 0 20px;
   .whitespace {
-    height: 230px;
+    margin-top: 5em;
     width: 100%;
-    margin-bottom: -38px;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     img {
+      max-width: 100%;
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 382px;
-      justify-content: center;
-      z-index: 1;
     }
   }
 
   .text-content {
-    border-radius: 0 120px 0 120px;
-    background-image: url(images/bg-pattern-circles.svg),
-      linear-gradient($gradient-1, $gradient-2);
-    background-repeat: no-repeat, no-repeat;
-    background-size: 165%, 100%;
-    background-position: 50% -3500%, 0% 0%;
-    border-bottom-left-radius: 100px;
-    border-top-right-radius: 100px;
-    text-align: center;
-    height: 628px;
-    padding: 0 20px 0 20px;
+ .text {
+      margin-top: 8em;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 0 2em 5em 2em;
+      h2 {
+        font-family: "Overpass", sans-serif;
+        font-weight: 600;
+        padding: 240px 0 0 0;
+        font-size: clamp(2rem, 5vw, 2.5rem);
+        margin-bottom: 20px;
+        color: color(White-text);
+      }
+      p {
+        font-family: "Overpass", sans-serif;
+        line-height: 1.6;
+        font-size: clamp(0.5rem, 5vw, 1rem);
+        color: color(White-text);
+        padding: 0px 10px 10px 10px;
+      }
+      
 
-    h2 {
-      font-family: "Overpass", sans-serif;
-      font-weight: 600;
-      padding: 240px 0 0 0;
-      font-size: 2.7rem;
-      margin-bottom: 20px;
-      color: color(White-text);
-    }
-    p {
-      font-family: "Overpass", sans-serif;
-      line-height: 1.6;
-      font-size: 17px;
-      color: color(White-text);
-      padding: 0px 10px 10px 10px;
     }
   }
 }
 .free-container {
+  font-family: "Overpass", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-top: 63px;
+  justify-content: center;
+  margin: 103px 0 65px 0;
   color: color(Very-dark-headings);
- .d-laptop{
-   display: none;
- }
+  overflow: hidden;
+  .laptop-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .image-laptop {
+    width: 100%;
+    background-image: url(/images/illustration-laptop-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    padding: 13em;
+    margin-top: 3em;
+
+    
+  }
+  h2 {
+    font-size: clamp(1.7rem, 5vw, 2rem);
+    span {
+      padding: 20px;
+    }
+  }
+
   .text-content {
+    width: 100%;
     margin-top: 37px;
     text-align: center;
     padding: 0 20px 0 20px;
-
-    h2 {
-      font-size: 2rem;
-      font-family: $font;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     p {
-      margin-top: 10px;
-      line-height: 1.7;
-      padding: 12px;
-      font-family: $font;
-      font-size: 17px;
-      padding: 4.5px;
-    }
-
-    .power {
-      margin-top: 46px;
+      line-height: 2;
+      padding: 2em;
+      font-size: clamp(0.5rem, 5vw, 1rem);
+    
+      max-width: 80%;
     }
   }
 }
 
 .blogr {
   background-color: color(Very-dark-black-blue-footer-background);
-  height: 988px;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -342,34 +362,35 @@ body {
   }
 }
 
-
+nav.menu {
+  display: block;
+}
 .nav-menu {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 2em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   width: 100vw;
   height: 100vh;
   padding-top: 53px;
   z-index: 999;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 
   .nav-close {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     width: 84%;
-    .mobile-close{
+    .mobile-close {
       cursor: pointer;
     }
   }
   .menu-container {
     background-color: color(White-text);
     width: 84%;
-
     border-radius: 10px;
     margin-top: 47px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 20px 30px rgba(0, 0, 0, 0.1);
@@ -415,9 +436,9 @@ body {
       justify-content: center;
     }
   }
-  
+  display: none;
 }
-hr{
+hr {
   margin-top: 20px;
   color: color(Grayish-blue-footer-text);
 }
@@ -439,32 +460,27 @@ hr{
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     font-weight: 700;
-   
-    
   }
   .btn-log {
     color: color(Very-dark-black-blue-footer-background);
     margin-bottom: 13px;
   }
   .btn-signup {
-   background-image: color(btn-color);
-   color: color(White-text);
+    background-image: color(btn-color);
+    color: color(White-text);
   }
 }
 
-.menu-hide{
-  left: 100vw;
-  opacity: 0;
+.hidden {
+  display: none;
 }
 .mobile-open {
+  cursor: pointer;
   height: 20px;
   width: 23px;
   transition: all 1s ease-in-out;
-}
-.open-hide{
-  opacity: 0;
 }
 
 .attribution {
@@ -474,4 +490,4 @@ hr{
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
-@import 'media1440';
+@import "media1440";
